@@ -198,8 +198,39 @@
             <xsl:apply-templates select="dri:help" mode="help"/>
         </xsl:if>
         <xsl:apply-templates select="." mode="normalField"/>
+        <xsl:if test="contains(dri:params/@operations,'add')">
+            <!-- Add buttons should be named "submit_[field]_add" so that we can ignore errors from required fields when simply adding new values-->
+            <input type="submit" value="Add" name="{concat('submit_',@n,'_add')}" class="ds-button-field ds-add-button">
+                <!-- Make invisible if we have choice-lookup popup that provides its own Add. -->
+                <xsl:if test="dri:params/@choicesPresentation = 'lookup'">
+                    <xsl:attribute name="style">
+                        <xsl:text>display:none;</xsl:text>
+                    </xsl:attribute>
+                </xsl:if>
+            </input>
+        </xsl:if>
         <xsl:if test="$test">
             <xsl:apply-templates select="dri:error" mode="error"/>
+        </xsl:if>
+        <xsl:if test="dri:instance">
+            <div class="ds-previous-values">
+                <!-- Iterate over the dri:instance elements contained in this field. The instances contain
+                    stored values as either "interpreted", "raw", or "default" values. -->
+                <xsl:call-template name="simpleFieldIterator">
+                    <xsl:with-param name="position">1</xsl:with-param>
+                </xsl:call-template>
+                <!-- Conclude with a DELETE button if the delete operation is specified. This allows
+                    removing one or more values stored for this field. -->
+                <xsl:if test="contains(dri:params/@operations,'delete') and dri:instance">
+                    <!-- Delete buttons should be named "submit_[field]_delete" so that we can ignore errors from required fields when simply removing values-->
+                    <input type="submit" value="Remove selected" name="{concat('submit_',@n,'_delete')}" class="ds-button-field ds-delete-button" />
+                </xsl:if>
+                <!-- Behind the scenes, add hidden fields for every instance set. This is to make sure that
+                    the form still submits the information in those instances, even though they are no
+                    longer encoded as HTML fields. The DRI Reference should contain the exact attributes
+                    the hidden fields should have in order for this to work properly. -->
+                <xsl:apply-templates select="dri:instance" mode="hiddenInterpreter"/>
+            </div>
         </xsl:if>
     </xsl:template>
 
